--- a/index.html
+++ b/index.html
@@ -3,131 +3,30 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Paginação</title>
+        <title>Tabela Com Troca de Posição</title>
+
         <link
             rel="stylesheet"
             href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
         />
-        <script
-            type="text/javascript"
-            src="http://code.jquery.com/jquery-1.11.2.min.js"
-        ></script>
+        <link rel="stylesheet" href="./style.css" />
     </head>
-    <style>
-        .alunos:hover {
-            cursor: pointer;
-        }
 
-        .alunos:active {
-            background-color: aqua;
-        }
-    </style>
     <body>
-        <script>
-            let lsStudents = [
-                "Alef Mourão dos Santos",
-                "Andrei Alexei Levy Buslik",
-                "Bruno Rafael",
-                "Danilo Silva Marques",
-                "Dayane Rodrigues Soares",
-                "Diego de Souza Sampaio",
-                "Emerson de Matos Felisberto",
-                "Gabriel de Oliveira Pinho",
-                "Henrique Pereira da Silva",
-                "Jhone Silva de Souza Justino",
-                "Jose Gildevan da Silva Santos",
-                "João Francisco dos Santos Chagas Goulart",
-                "Julia Torres Furtado Lima",
-                "Jônathas da Silva Maciel",
-                "Lorena Oliveira Muniz Ferreira",
-                "Lucas Luna Cavalcante",
-                "Marcos Gabriel Pereira Silva",
-                "Marcos Guilherme Barbosa da Silva",
-                "Thays Ferreira Melo",
-                "Yury Negreiros Santos",
-            ];
-            // console.log(lsStudents);
-
-            pgAtual = 0;
-
-            function carregarTabela(pg) {
-                tamanhoArray = Math.ceil(lsStudents.length / 5);
-                if (pg <= 0 || pg > tamanhoArray) {
-                    return;
-                }
-
-                pgAtual = pg;
-                fim = pg * 5;
-                inicio = fim - 5;
-                txLinhas = "";
-                for (i = inicio; i < fim; i++) {
-                    // console.log(lsStudents[i])
-                    if (lsStudents[i] == undefined) break;
-                    txLinhas += `<tr><td>${
-                        Number(i) + 1
-                    }</td><td class="alunos">${
-                        lsStudents[i]
-                    }</td><td><input type="button" value="^" class="move up" /><input type="button" value="v" class="move down" /></td></tr>`;
-                }
-                document.getElementById("corpoTabela").innerHTML = txLinhas;
-                itemLista = document.getElementById("pg-" + pg);
-                itemLista.classList.add("active");
-
-                antigo = document.getElementById("pgAt");
-                if (antigo.value != "") {
-                    itemLista = document.getElementById("pg-" + antigo.value);
-                    itemLista.classList.remove("active");
-                }
-
-                antigo.value = pg;
-            }
-
-            function mudarPagina(pg) {
-                carregarTabela(pgAtual + pg);
-            }
-        </script>
-
         <input type="hidden" value="" id="pgAt" />
+
         <table class="table table-striped">
             <thead>
                 <tr>
-                    <th>Nº</th>
-                    <th>Aluno</th>
+                    <th>Linha</th>
+                    <th>Nome do Alunos</th>
                 </tr>
             </thead>
             <tbody id="corpoTabela"></tbody>
         </table>
-        <ul class="pagination justify-content-center" id="paginacao"></ul>
-        <script>
-            lsPagina = `<li class="page-item"><a class="page-link" href="#" onclick="carregarTabela(document.getElementById('pgAt').value -1)">Anterior</a></li>`;
-            tamanhoArray = Math.ceil(lsStudents.length / 5);
-            for (i = 0; i < tamanhoArray; i++) {
-                lsPagina += `<li id='pg-${
-                    Number(i) + 1
-                }' class="page-item"><a class="page-link" href="#" onclick="carregarTabela(${
-                    Number(i) + 1
-                })">${Number(i) + 1}</a></li>`;
-            }
-            lsPagina += `<li class="page-item"><a class="page-link" href="#" onclick="carregarTabela(Number(document.getElementById('pgAt').value) +1)">Próximo</a></li>`;
-            document.getElementById("paginacao").innerHTML = lsPagina;
-            carregarTabela(1);
 
-            $("#corpoTabela input.move").click(function () {
-                var row = $(this).closest("tr");
-                if ($(this).hasClass("up")) row.prev().before(row);
-                else row.next().after(row);
-            });
-            // $(document).on("ready", function () {
-            //     var $tbody = $("#corpoTabela");
-            //     var selected = null;
-            //     $tbody.children().on("click", function () {
-            //         if (selected == null) selected = this;
-            //         else {
-            //             $(selected).insertAfter(this);
-            //             selected = null;
-            //         }
-            //     });
-            // });
-        </script>
+        <ul class="pagination justify-content-center" id="paginacao"></ul>
+
+        <script src="./index.js"></script>
     </body>
 </html>
